fix userSelectPallete gaps and footer border theming

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
       --accent: 96, 94%, 21%;
       --input: 240 5.9% 10%;
       --radius: 0.5rem;
+      --border-color: black;
    }
 
    .dark {
@@ -21,6 +22,7 @@
       --accent: 240, 54%, 65%;
       --cursor: 240, 74%, 77%;
       --radius: 0.5rem;
+      --border-color: white;
    }
 
    .light-green {
